--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 
   <div class="attribution text-white">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" class="text-PaleBlue">Frontend Mentor</a>. 
-    Coded by <a href="https://github.com/Sefat-Khan" class="text-PaleBlue">sefat khan</a>.
+    Coded by <a href="https://github.com/Sefat-Khan" class="text-PaleBlue">Mahabub Ahmed</a>.
   </div>
 
   <script src="script.js"></script>
